--- a/django/languagegallery/templates/gallery.html
+++ b/django/languagegallery/templates/gallery.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html><html>
-<head>{% load static %}
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="{% static 'gallery/style.css' %}">
-  <title>Image gallery</title>
-</head>
-<body>
-{% for file in file_list %}
-  <div class="image_frame">
-    <a href="files/{{file.hash_hex}}.{{file.extension}}" target="_blank">
-      <img src="thumb/{{file.hash_hex}}.jpeg">
-    </a>
-  </div>
-{% endfor %}
+{% extends "base.html" %}
 
-<form action="{% url 'languagegallery:upload' %}"
-    enctype="multipart/form-data" method="post">
-  {% csrf_token %}
-  Title: <input type="text" name="title"><br>
-  File: <input type="file" name="upload"><br>
-  Tags: <br>
-  <input type="submit" value="Send"><br>
-</form>
+{% block title %}Gallery{% endblock %}
 
-</body>
-</html>
+{% block content %}
+  {% for file in file_list %}
+    <div class="image_frame">
+      <a href="{% url 'languagegallery:show' file_hash=file.sha256 %}"
+          target="_blank">
+        <img src="{% url 'languagegallery:thumb' file_hash=file.sha256 %}">
+      </a>
+    </div>
+  {% endfor %}
+
+  <form action="{% url 'languagegallery:upload' %}"
+      enctype="multipart/form-data" method="post">
+    {% csrf_token %}
+    <table>
+    {{ upload_form }}
+    </table>
+    <input type="submit" value="Send"><br>
+  </form>
+{% endblock %}
