--- a/django/languagegallery/templates/frame.html
+++ b/django/languagegallery/templates/frame.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="file">
-    <img src="{% url 'languagegallery:file' file_hash=file.sha256 extension=file.mimetype.extension %}">
+    <img src="{% url 'languagegallery:file' hash=file.sha256 extension=file.mimetype.extension %}">
     <p>{{ file.title }}</p>
     <ul>{% for tag in tags %}
       <li>{{ tag.name }}</li>
