--- a/django/languagegallery/templates/gallery.html
+++ b/django/languagegallery/templates/gallery.html
@@ -5,19 +5,21 @@
 {% block content %}
   {% for file in file_list %}
     <div class="image_frame">
-      <a href="{% url 'languagegallery:show' file_hash=file.sha256 %}"
+      <a href="{% url 'languagegallery:show' hash=file.sha256 %}"
           target="_blank">
-        <img src="{% url 'languagegallery:thumb' file_hash=file.sha256 %}">
+        <img src="{% url 'languagegallery:thumb' hash=file.sha256 %}">
       </a>
     </div>
   {% endfor %}
 
-  <form action="{% url 'languagegallery:upload' %}"
-      enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <table>
-    {{ upload_form }}
-    </table>
-    <input type="submit" value="Send"><br>
-  </form>
+  {% if user.is_authenticated %}
+    <div id="upload-form">
+      <form action="{% url 'languagegallery:upload' %}"
+          enctype="multipart/form-data" method="post">
+        {% csrf_token %}
+        <input type="file" name="upload" required id="id_upload">
+        <input type="submit" value="Send">
+      </form>
+    </div>
+  {% endif %}
 {% endblock %}
