--- a/django/languagegallery/templates/base.html
+++ b/django/languagegallery/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Image gallery{% endblock %}</title>
   </head>
   <body>
-    <div>
+    <div id="content">
       {% block content %}{% endblock %}
     </div>
   </body>
