--- a/django/languagegallery/templates/frame.html
+++ b/django/languagegallery/templates/frame.html
@@ -5,11 +5,27 @@
 {% block content %}
   <div class="file">
     <img src="{% url 'languagegallery:file' hash=file.sha256 extension=file.mimetype.extension %}">
-    <p>{{ file.title }}</p>
-    <ul>{% for tag in tags %}
-      <li>{{ tag.name }}</li>
-    {% endfor -%}
-    </ul>
+    {% if user.is_authenticated %}
+      <div id="upload-form">
+        <form action="{% url 'languagegallery:update' hash=file.sha256 %}"
+            enctype="multipart/form-data" method="post">
+          {% csrf_token %}
+          <p><input type="text" name="title" id="id_title" value="{{ file.title }}"></p>
+          <ul>{% for tag in tags %}
+              <li>{{ tag.name }}</li>
+            {% endfor -%}
+            <li><input type="text" name="add_tag" id="id_add_tag"></li>
+          </ul>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+    {% else %}
+      <p>{{ file.title }}</p>
+      <ul>{% for tag in tags %}
+        <li>{{ tag.name }}</li>
+      {% endfor -%}
+      </ul>
+    {% endif %}
   </div>
 {% endblock %}
 
