--- a/django/languagegallery/static/gallery/style.css
+++ b/django/languagegallery/static/gallery/style.css
@@ -4,6 +4,12 @@ div#content {
   margin: auto;
 }
 
+img.icon {
+  height: 1em;
+  vertical-align: bottom;
+  padding: 2pt 3pt;
+}
+
 div#content img {
   max-width: 1200pt;
 }
@@ -32,4 +38,49 @@ div.file {
 
 div#upload-form {
   text-align: center;
+  max-width: 600pt;
+  margin: auto;
 }
+
+input#id_title {
+  border: none;
+  border-radius: 0pt;
+  padding: 5pt;
+  text-align: center;
+}
+
+input#id_title:focus {
+  border-bottom: solid 1pt #88a;
+  background: #0001;
+  width: 95%;
+}
+
+ul#tags {
+  margin: auto;
+}
+
+ul#tags li {
+  display: inline-block;
+  background: #aaf;
+  color: #004;
+  padding: 2pt 10pt;
+  border-radius: 10pt;
+}
+
+ul#tags li.input {
+  background: none;
+  border: none;
+}
+
+a.delete {
+  text-decoration: none;
+}
+
+input#id_add_tag {
+  border: none;
+  border-bottom: solid 1pt #88a;
+  border-radius: 0pt;
+  background: #0001;
+  padding: 5pt;
+}
+
