--- a/django/languagegallery/templates/gallery.html
+++ b/django/languagegallery/templates/gallery.html
@@ -24,4 +24,22 @@
       </form>
     </div>
   {% endif %}
+
+  <script type="text/python">
+from browser import document
+
+form_div = document.querySelector('#upload-form')
+
+form_div.querySelector('input[type="submit"]').hidden = True
+upload = form_div.querySelector('#id_upload')
+upload.onchange = form_div.querySelector('form').submit
+upload.hidden = True
+
+button = document.createElement('button')
+button.appendChild(document.createTextNode('Upload'))
+button.onclick = upload.click
+
+form_div.appendChild(upload_button)
+
+  </script>
 {% endblock %}
