Closes #7 #8: Access and visibility control
- Small coding style changes
- Publicity property for images
- Owner and change time properties for files
- Access control

--- a/django/languagegallery/static/gallery/style.css
+++ b/django/languagegallery/static/gallery/style.css
@@ -22,14 +22,12 @@ div#image_list {
   align-content: flex-start;
 }
 
-div.image_frame {
+div#image_list div.image_frame {
   display: inline-block;
   margin: 1px;
   border: none;
   text-align: center;
   vertical-align: middle;
-  width: 150px;
-  height: 150px;
 }
 
 div.file {
