--- a/django/languagegallery/templates/frame.html
+++ b/django/languagegallery/templates/frame.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}{% load static %}
 
-{% block title %}File | {{ file.title }}{% endblock %}
+{% block title %}File | {% if file.title %}{{ file.title }}{% else %}{{ file.basename }}{% endif %}{% endblock %}
 
 {% block content %}
   <div class="file">
@@ -11,6 +11,10 @@
             enctype="multipart/form-data" method="post">
           {% csrf_token %}
           <p><input type="text" name="title" id="id_title" value="{{ file.title }}"></p>
+          <p>{{ file.basename }}</p>
+          <p><input type="checkbox" name="is_public"
+              id="id_is_public"{% if file.is_public %} checked{% endif %}>
+            <label for="id_is_public">public</p>
           <ul id="tags">{% for tag in tags %}
             <li>{{ tag.name }}<a
                 href="{% url 'languagegallery:deltag' hash=file.sha256 tag=tag.pk %}"
@@ -24,6 +28,7 @@
       </div>
     {% else %}
       <p>{{ file.title }}</p>
+      <p>{{ file.basename }}</p>
       <ul id="tags">{% for tag in tags %}
         <li>{{ tag.name }}</li>
       {% endfor -%}
