--- a/django/languagegallery/templates/frame.html
+++ b/django/languagegallery/templates/frame.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="file">
     <img src="{% url 'languagegallery:file' hash=file.sha256 extension=file.mimetype.extension %}">
-    {% if user.is_authenticated %}
+    {% if show_edit %}
       <div id="upload-form">
         <form action="{% url 'languagegallery:update' hash=file.sha256 %}"
             enctype="multipart/form-data" method="post">
