Moved scripting out of html files

--- a/django/languagegallery/templates/base.html
+++ b/django/languagegallery/templates/base.html
@@ -11,5 +11,6 @@
     <div id="content">
       {% block content %}{% endblock %}
     </div>
+    <script type="text/python">{% block script %}{% endblock %}</script>
   </body>
 </html>
