--- a/django/languagegallery/templates/frame.html
+++ b/django/languagegallery/templates/frame.html
@@ -4,10 +4,10 @@
 
 {% block content %}
   <div class="file">
-    <img src="{% url 'languagegallery:file' hash=file.sha256 extension=file.mimetype.extension %}">
+    <img src="{% url 'languagegallery:get_file' hash=file.sha256 extension=file.mimetype.extension %}">
     {% if show_edit %}
       <div id="upload-form">
-        <form action="{% url 'languagegallery:update' hash=file.sha256 %}"
+        <form action="{% url 'languagegallery:show_update' hash=file.sha256 %}"
             enctype="multipart/form-data" method="post">
           {% csrf_token %}
           <p><input type="text" name="title" id="id_title" value="{{ file.title }}"></p>
@@ -17,7 +17,7 @@
             <label for="id_is_public">public</p>
           <ul id="tags">{% for tag in tags %}
             <li>{{ tag.name }}<a
-                href="{% url 'languagegallery:update' hash=file.sha256 %}?del_tag={{ tag.pk }}"
+                href="{% url 'languagegallery:show_update' hash=file.sha256 %}?del_tag={{ tag.pk }}"
                 class="delete"><img class="icon" src="{% static 'icons/delete.svg' %}"></a>
             </li>
             {% endfor -%}
