--- a/django/languagegallery/templates/base.html
+++ b/django/languagegallery/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script type="text/javascript" src="{% static 'brython.js' %}"></script>
     <script type="text/javascript" src="{% static 'brython_stdlib.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'gallery/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>{% block title %}Image gallery{% endblock %}</title>
   </head>
   <body onload="brython()">
